2006-06-20  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/tools/*xcf: forgot the source xcfs

2006-06-20  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/*: apply Tango style on the default iconset.
		A teamwork of Andreas Nilsson, Lapo Calamandrei, William
		Szilvester and myself.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl

	* plug-ins/common/desktop-link.c: new load plug-in that parses a
	.desktop file and if it is a link, asks GIMP to open the file the
	link points to (bug #326956).

2006-06-20  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c (about_dialog_create): only unref the
	logo pixmap if it is not NULL; loading it may fail.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* app/tools/tools-enums.h: added TRANSFORM_HANDLE_NONE (will get
	rid of TRANSFORM_CREATING later).

	* app/tools/gimptransformtool.[ch]: added member "use_handles" and
	default to FALSE for all "use_foo" variables.  Only deal with the
	handles the specific transform tool asks for.  Set cursors
	according to the active handle.

	* app/tools/gimpfliptool.c
	* app/tools/gimpperspectivetool.c
	* app/tools/gimprotatetool.c
	* app/tools/gimpscaletool.c
	* app/tools/gimpsheartool.c: changed accordingly.

2006-06-19  Sven Neumann  <sven@gimp.org>

	* app/actions/error-console-commands.c
	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell-scale.c
	* app/tools/gimpmeasuretool.c
	* app/tools/gimptexttool.c
	* app/widgets/gimpcellrendereraccel.c
	* app/widgets/gimpviewabledialog.c
	* app/widgets/gimpviewrenderer.c: changed casts in calls to
	g_object_add_weak_pointer() to silence compiler warnings.

2006-06-19  Sven Neumann  <sven@gimp.org>

	* app/config/gimpguiconfig.c (DEFAULT_WEB_BROWSER): changed to
	"firefox", most distributions seem to have renamed the binary.

2006-06-19  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-logo.png: replaced with the application logo