@@ -1,498 +1,0 @@
-# pixmap_path "<dir 1>:<dir 2>:<dir 3>:..."
-#
-# include "rc-file"
-#
-# style <name> [= <name>]
-# {
-#   <option>
-#
-#   stock[<stock_id>] =
-#     {
-#       { <filename> [, <direction> [, <state> [, <size>]]] },
-#       { ... }
-#     }
-# }
-#
-# widget <widget_set> style <style_name>
-# widget_class <widget_class_set> style <style_name>
-
-
-style "gimp-icons"
-{
-  # The GIMP Default theme has stock icons only in "gtk-button" size.
-  #
-  # They are registered with this size so they are not scaled
-  # for buttons. Additionally, they are registered as wildcarded
-  # fallbacks for themselves.
-
-  # General purpose icons
-  #
-  stock["gimp-anchor"] =
-    {
-      { "images/stock-anchor-16.png", *, *, "gtk-button" },
-      { "images/stock-anchor-16.png", *, *, *            }
-    }
-  stock["gimp-duplicate"] =
-    {
-      { "images/stock-duplicate-16.png", *, *, "gtk-button" },
-      { "images/stock-duplicate-16.png", *, *, *            }
-    }
-  stock["gimp-edit"] =
-    {
-      { "images/stock-edit-16.png", *, *, "gtk-button" },
-      { "images/stock-edit-16.png", *, *, *            }
-    }
-  stock["gimp-info"] =
-    {
-      { "images/stock-info-16.png", *, *, "gtk-menu"   },
-      { "images/stock-info-24.png", *, *, "gtk-button" },
-      { "images/stock-info-24.png", *, *, *            },
-    }
-  stock["gimp-linked"] =
-    {
-      { "images/stock-linked-16.png", *, *, "gtk-button" },
-      { "images/stock-linked-16.png", *, *, *            }
-    }
-  stock["gimp-paste-as-new"] =
-    {
-      { "images/stock-paste-as-new-16.png", *, *, "gtk-button" },
-      { "images/stock-paste-as-new-16.png", *, *, *            }
-    }
-  stock["gimp-paste-into"] =
-    {
-      { "images/stock-paste-into-16.png", *, *, "gtk-button" },
-      { "images/stock-paste-into-16.png", *, *, *            }
-    }
-  stock["gimp-reset"] =
-    {
-      { "images/stock-reset-16.png", *, *, "gtk-button" },
-      { "images/stock-reset-16.png", *, *, *            }
-    }
-  stock["gimp-selection-stroke"] =
-    {
-      { "images/stock-selection-stroke-16.png", *, *, "gtk-button" },
-      { "images/stock-selection-stroke-16.png", *, *, *            }
-    }
-  stock["gimp-to-path"] =
-    {
-      { "images/stock-to-path-16.png", *, *, "gtk-button" },
-      { "images/stock-to-path-16.png", *, *, *            }
-    }
-  stock["gimp-to-selection"] =
-    {
-      { "images/stock-to-selection-16.png", *, *, "gtk-button" },
-      { "images/stock-to-selection-16.png", *, *, *            }
-    }
-  stock["gimp-visible"] =
-    {
-      { "images/stock-visible-16.png", *, *, "gtk-button" },
-      { "images/stock-visible-16.png", *, *, *            }
-    }
-  stock["gimp-warning"] =
-    {
-      { "images/stock-warning-16.png", *, *, "gtk-menu"   },
-      { "images/stock-warning-24.png", *, *, "gtk-button" },
-      { "images/stock-warning-24.png", *, *, *            },
-    }
-
-  # Selection tool options window
-  #
-  stock["gimp-selection-replace"] =
-    {
-      { "images/stock-selection-replace-16.png", *, *, "gtk-button" },
-      { "images/stock-selection-replace-16.png", *, *, * }
-    }
-  stock["gimp-selection-add"] =
-    {
-      { "images/stock-selection-add-16.png", *, *, "gtk-button" },
-      { "images/stock-selection-add-16.png", *, *, * }
-    }
-  stock["gimp-selection-subtract"] =
-    {
-      { "images/stock-selection-subtract-16.png", *, *, "gtk-button" },
-      { "images/stock-selection-subtract-16.png", *, *, * }
-    }
-  stock["gimp-selection-intersect"] =
-    {
-      { "images/stock-selection-intersect-16.png", *, *, "gtk-button" },
-      { "images/stock-selection-intersect-16.png", *, *, * }
-    }
-
-  # Misc menu icons
-  #
-  stock["gimp-convert-rgb"] =
-    {
-      { "images/stock-convert-rgb-16.png", *, *, "gtk-menu" },
-      { "images/stock-convert-rgb-16.png", *, *, * }
-    }
-  stock["gimp-convert-grayscale"] =
-    {
-      { "images/stock-convert-grayscale-16.png", *, *, "gtk-menu" },
-      { "images/stock-convert-grayscale-16.png", *, *, * }
-    }
-  stock["gimp-convert-indexed"] =
-    {
-      { "images/stock-convert-indexed-16.png", *, *, "gtk-menu" },
-      { "images/stock-convert-indexed-16.png", *, *, * }
-    }
-  stock["gimp-invert"] =
-    {
-      { "images/stock-invert-16.png", *, *, "gtk-button" },
-      { "images/stock-invert-16.png", *, *, *            },
-    }
-  stock["gimp-all"] =
-    {
-      { "images/stock-all-16.png", *, *, "gtk-button" },
-      { "images/stock-all-16.png", *, *, *            },
-    }
-  stock["gimp-none"] =
-    {
-      { "images/stock-none-16.png", *, *, "gtk-button" },
-      { "images/stock-none-16.png", *, *, *            },
-    }
-  stock["gimp-grow"] =
-    {
-      { "images/stock-grow-16.png", *, *, "gtk-button" },
-      { "images/stock-grow-16.png", *, *, *            },
-    }
-  stock["gimp-shrink"] =
-    {
-      { "images/stock-shrink-16.png", *, *, "gtk-button" },
-      { "images/stock-shrink-16.png", *, *, *            },
-    }
-  stock["gimp-merge-down"] =
-    {
-      { "images/stock-merge-down-16.png", *, *, "gtk-menu" },
-      { "images/stock-merge-down-16.png", *, *, * }
-    }
-  stock["gimp-reshow-filter"] =
-    {
-      { "images/stock-reshow-filter-16.png", *, *, "gtk-menu" },
-      { "images/stock-reshow-filter-16.png", *, *, * }
-    }
-  stock["gimp-rotate-90"] =
-    {
-      { "images/stock-rotate-90-16.png", *, *, "gtk-menu" },
-      { "images/stock-rotate-90-16.png", *, *, * }
-    }
-  stock["gimp-rotate-180"] =
-    {
-      { "images/stock-rotate-180-16.png", *, *, "gtk-menu" },
-      { "images/stock-rotate-180-16.png", *, *, * }
-    }
-  stock["gimp-rotate-270"] =
-    {
-      { "images/stock-rotate-270-16.png", *, *, "gtk-menu" },
-      { "images/stock-rotate-270-16.png", *, *, * }
-    }
-  stock["gimp-resize"] =
-    {
-      { "images/stock-resize-16.png", *, *, "gtk-menu" },
-      { "images/stock-resize-16.png", *, *, * }
-    }
-  stock["gimp-scale"] =
-    {
-      { "images/stock-scale-16.png", *, *, "gtk-menu" },
-      { "images/stock-scale-16.png", *, *, * }
-    }
-  stock["gimp-selection-to-channel"] =
-    {
-      { "images/stock-selection-to-channel-16.png", *, *, "gtk-menu" },
-      { "images/stock-selection-to-channel-16.png", *, *, * }
-    }
-  stock["gimp-tool-options"] =
-    {
-      { "images/stock-tool-options-16.png", *, *, "gtk-menu" },
-      { "images/stock-tool-options-16.png", *, *, * }
-    }
-  stock["gimp-device-status"] =
-    {
-      { "images/stock-device-status-16.png", *, *, "gtk-menu" },
-      { "images/stock-device-status-16.png", *, *, * }
-    }
-  stock["gimp-layer-to-imagesize"] =
-    {
-      { "images/stock-layer-to-imagesize-16.png", *, *, "gtk-menu" },
-      { "images/stock-layer-to-imagesize-16.png", *, *, * }
-    }
-  stock["gimp-images"] =
-    {
-      { "images/stock-images-16.png", *, *, "gtk-menu" },
-      { "images/stock-images-16.png", *, *, * }
-    }
-  stock["gimp-layers"] =
-    {
-      { "images/stock-layers-16.png", *, *, "gtk-menu" },
-      { "images/stock-layers-16.png", *, *, * }
-    }
-  stock["gimp-channes"] =
-    {
-      { "images/stock-channels-16.png", *, *, "gtk-menu" },
-      { "images/stock-channels-16.png", *, *, * }
-    }
-  stock["gimp-paths"] =
-    {
-      { "images/stock-paths-16.png", *, *, "gtk-menu" },
-      { "images/stock-paths-16.png", *, *, * }
-    }
-
-  # Image window icons
-  #
-  stock["gimp-navigation"] =
-    {
-      { "images/stock-navigation-16.png", *, *, "gtk-menu" },
-      { "images/stock-navigation-16.png", *, *, * }
-    }
-  stock["gimp-qmask-off"] =
-    {
-      { "images/stock-qmask-off-16.png", *, *, "gtk-menu" },
-      { "images/stock-qmask-off-16.png", *, *, * }
-    }
-  stock["gimp-qmask-on"] =
-    {
-      { "images/stock-qmask-on-16.png", *, *, "gtk-menu" },
-      { "images/stock-qmask-on-16.png", *, *, * }
-    }
-
-  # Toolbox icons
-  #
-  stock["gimp-default-colors"] =
-    {
-      { "images/stock-default-colors-12.png", *, *, "gtk-menu" },
-      { "images/stock-default-colors-12.png", *, *, * }
-    }
-  stock["gimp-swap-colors"] =
-    {
-      { "images/stock-swap-colors-12.png", *, *, "gtk-menu" },
-      { "images/stock-swap-colors-12.png", *, *, * }
-    }
-
-  # X & Y linked or not
-  #
-  stock["gimp-hchain"] =
-    {
-      { "images/stock-hchain-24.png", *, *, "gtk-button" },
-      { "images/stock-hchain-24.png", *, *, * }
-    }
-  stock["gimp-hchain-broken"] =
-    {
-      { "images/stock-hchain-broken-24.png", *, *, "gtk-button" },
-      { "images/stock-hchain-broken-24.png", *, *, * }
-    }
-  stock["gimp-vchain"] =
-    {
-      { "images/stock-vchain-24.png", *, *, "gtk-button" },
-      { "images/stock-vchain-24.png", *, *, * }
-    }
-  stock["gimp-vchain-broken"] =
-    {
-      { "images/stock-vchain-broken-24.png", *, *, "gtk-button" },
-      { "images/stock-vchain-broken-24.png", *, *, * }
-    }
-
-  # Wilber *_`@@'
-  #
-  stock["gimp-wilber"] =
-    {
-      { "images/stock-wilber-16.png", *, *, "gtk-menu" }
-    }
-  stock["gimp-wilber-eek"] =
-    {
-      { "images/stock-wilber-eek-64.png", *, *, * }
-    }
-
-  # Tool icons
-  #
-  stock["gimp-tool-airbrush"] =
-    {
-      { "images/tools/stock-tool-airbrush-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-airbrush-22.png", *, *, *            }
-    }
-  stock["gimp-tool-bezier-select"] =
-    {
-      { "images/tools/stock-tool-bezier-select-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-bezier-select-22.png", *, *, *            }
-    }
-  stock["gimp-tool-blend"] =
-    {
-      { "images/tools/stock-tool-blend-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-blend-22.png", *, *, *            }
-    }
-  stock["gimp-tool-blur"] =
-    {
-      { "images/tools/stock-tool-blur-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-blur-22.png", *, *, *            }
-    }
-  stock["gimp-tool-brightness-contrast"] =
-    {
-      { "images/tools/stock-tool-brightness-contrast-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-brightness-contrast-22.png", *, *, *            }
-    }
-  stock["gimp-tool-bucket-fill"] =
-    {
-      { "images/tools/stock-tool-bucket-fill-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-bucket-fill-22.png", *, *, *            }
-    }
-  stock["gimp-tool-by-color-select"] =
-    {
-      { "images/tools/stock-tool-by-color-select-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-by-color-select-22.png", *, *, *            }
-    }
-  stock["gimp-tool-clone"] =
-    {
-      { "images/tools/stock-tool-clone-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-clone-22.png", *, *, *            }
-    }
-  stock["gimp-tool-color-balance"] =
-    {
-      { "images/tools/stock-tool-color-balance-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-color-balance-22.png", *, *, *            }
-    }
-  stock["gimp-tool-color-picker"] =
-    {
-      { "images/tools/stock-tool-color-picker-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-color-picker-22.png", *, *, *            }
-    }
-  stock["gimp-tool-crop"] =
-    {
-      { "images/tools/stock-tool-crop-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-crop-22.png", *, *, *            }
-    }
-  stock["gimp-tool-curves"] =
-    {
-      { "images/tools/stock-tool-curves-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-curves-22.png", *, *, *            }
-    }
-  stock["gimp-tool-dodge"] =
-    {
-      { "images/tools/stock-tool-dodge-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-dodge-22.png", *, *, *            }
-    }
-  stock["gimp-tool-ellipse-select"] =
-    {
-      { "images/tools/stock-tool-ellipse-select-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-ellipse-select-22.png", *, *, *            }
-    }
-  stock["gimp-tool-eraser"] =
-    {
-      { "images/tools/stock-tool-eraser-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-eraser-22.png", *, *, *            }
-    }
-  stock["gimp-tool-flip"] =
-    {
-      { "images/tools/stock-tool-flip-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-flip-22.png", *, *, *            }
-    }
-  stock["gimp-tool-free-select"] =
-    {
-      { "images/tools/stock-tool-free-select-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-free-select-22.png", *, *, *            }
-    }
-  stock["gimp-tool-fuzzy-select"] =
-    {
-      { "images/tools/stock-tool-fuzzy-select-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-fuzzy-select-22.png", *, *, *            }
-    }
-  stock["gimp-tool-histogram"] =
-    {
-      { "images/tools/stock-tool-histogram-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-histogram-22.png", *, *, *            }
-    }
-  stock["gimp-tool-hue-saturation"] =
-    {
-      { "images/tools/stock-tool-hue-saturation-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-hue-saturation-22.png", *, *, *            }
-    }
-  stock["gimp-tool-ink"] =
-    {
-      { "images/tools/stock-tool-ink-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-ink-22.png", *, *, *            }
-    }
-  stock["gimp-tool-iscissors"] =
-    {
-      { "images/tools/stock-tool-iscissors-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-iscissors-22.png", *, *, *            }
-    }
-  stock["gimp-tool-levels"] =
-    {
-      { "images/tools/stock-tool-levels-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-levels-22.png", *, *, *            }
-    }
-  stock["gimp-tool-measure"] =
-    {
-      { "images/tools/stock-tool-measure-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-measure-22.png", *, *, *            }
-    }
-  stock["gimp-tool-move"] =
-    {
-      { "images/tools/stock-tool-move-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-move-22.png", *, *, *            }
-    }
-  stock["gimp-tool-paintbrush"] =
-    {
-      { "images/tools/stock-tool-paintbrush-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-paintbrush-22.png", *, *, *            }
-    }
-  stock["gimp-tool-path"] =
-    {
-      { "images/tools/stock-tool-path-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-path-22.png", *, *, *            }
-    }
-  stock["gimp-tool-pencil"] =
-    {
-      { "images/tools/stock-tool-pencil-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-pencil-22.png", *, *, *            }
-    }
-  stock["gimp-tool-perspective"] =
-    {
-      { "images/tools/stock-tool-perspective-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-perspective-22.png", *, *, *            }
-    }
-  stock["gimp-tool-posterize"] =
-    {
-      { "images/tools/stock-tool-posterize-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-posterize-22.png", *, *, *            }
-    }
-  stock["gimp-tool-rect-select"] =
-    {
-      { "images/tools/stock-tool-rect-select-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-rect-select-22.png", *, *, *            }
-    }
-  stock["gimp-tool-rotate"] =
-    {
-      { "images/tools/stock-tool-rotate-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-rotate-22.png", *, *, *            }
-    }
-  stock["gimp-tool-scale"] =
-    {
-      { "images/tools/stock-tool-scale-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-scale-22.png", *, *, *            }
-    }
-  stock["gimp-tool-shear"] =
-    {
-      { "images/tools/stock-tool-shear-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-shear-22.png", *, *, *            }
-    }
-  stock["gimp-tool-smudge"] =
-    {
-      { "images/tools/stock-tool-smudge-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-smudge-22.png", *, *, *            }
-    }
-  stock["gimp-tool-text"] =
-    {
-      { "images/tools/stock-tool-text-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-text-22.png", *, *, *            }
-    }
-  stock["gimp-tool-threshold"] =
-    {
-      { "images/tools/stock-tool-threshold-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-threshold-22.png", *, *, *            }
-    }
-  stock["gimp-tool-zoom"] =
-    {
-      { "images/tools/stock-tool-zoom-22.png", *, *, "gtk-button" },
-      { "images/tools/stock-tool-zoom-22.png", *, *, *            }
-    }
-}
-
-class "GtkWidget" style "gimp-icons"
